Finished plugin tests, bug fixes